Add project structure and configurations

--- a/SwapIt.API/appsettings.json
+++ b/SwapIt.API/appsettings.json
@@ -1,9 +1,19 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=SwapItDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Token": {
+    "Issuer": "mrs-issuer",
+    "Audience": "mrs-audience",
+    "Key": "2746EF6C-9858-4C8D-935E-20CC6EBB80A2",
+    "ExpiryMinutes": "500"
   },
   "AllowedHosts": "*"
 }
