--- a/SwapIt.BL/SwapIt.BL.csproj
+++ b/SwapIt.BL/SwapIt.BL.csproj
@@ -8,6 +8,11 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SwapIt.Data\SwapIt.Data.csproj" />
   </ItemGroup>
 
 </Project>
