changed directory of entities

--- a/SwapIt.API/appsettings.json
+++ b/SwapIt.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=SwapItDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-MSUAR7J\\SQLEXPRESS;Database=SwapItDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
 
   "Logging": {
